# waifu-companion

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  companion.toml.example
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
apps/companion-server/: Cargo.toml
apps/companion-server/src/: bridges.rs  characters.rs  main.rs  pulse_api.rs  state.rs  web_assets.rs
apps/companion-server/src/handlers/: characters.rs  chat.rs  config.rs  health.rs  mod.rs
apps/companion-server/tests/: http_extended.rs  http_smoke.rs
apps/companion-tauri/: Cargo.toml  README.md  build.rs  tauri.conf.json
apps/companion-tauri/icons/: icon.icns
apps/companion-tauri/src/: lib.rs
assets/: README.md
crates/companion-avatar/: Cargo.toml
crates/companion-avatar/src/: config.rs  expression.rs  lib.rs  lip_sync.rs  protocol.rs  speech_server.rs  subagent.rs  traits.rs  translator.rs  tts_server.rs  ws.rs
crates/companion-avatar/src/ws/: mod.rs  text.rs
crates/companion-avatar/tests/: qwen3_sidecar_smoke.rs  translator_port_e2e.rs  tts_port_e2e.rs
crates/companion-core/: Cargo.toml
crates/companion-core/src/: config.rs  lib.rs  llm.rs  zeroclaw.rs
crates/companion-core/tests/: llm_client_e2e.rs  zeroclaw_client_e2e.rs
crates/companion-pulse/: Cargo.toml
crates/companion-pulse/src/: config.rs  lib.rs  models.rs  scheduler.rs  storage.rs  summarizer.rs
crates/companion-pulse/src/collectors/: github.rs  hackernews.rs  mod.rs  rss.rs  videos.rs
data/: pulse.db
docs/: ADDING-A-PULSE-COLLECTOR.md  ADDING-A-TTS-ENGINE.md  ARCHITECTURE.md  DEVELOPMENT-SETUP.md  E2E-SMOKE-TEST.md  PULSE-MIGRATION.md  README.md  TESTING-SOP.md  TTS-MULTILINGUAL-GUIDE.md  TTS-PROVIDER-SPEC.md
docs/design/: PLAN-UNIFIED-CHAT.md  PULSE-MIGRATION.md
scripts/: cdp_perf_check.py  cdp_reload_snap.py  cdp_snap.py  cdp_snap_pulse.py  cdp_snap_settings.py  cdp_test_open.py  e2e_browser_test.py  e2e_characters_test.py  e2e_chat_pipeline.py  e2e_drag_to_translate_test.py  e2e_multi_window_test.py  e2e_overlay_chat_test.py  e2e_overlay_drag_test.py  e2e_param_sliders_test.py  e2e_pulse_features_test.py  e2e_pulse_sources_test.py  e2e_pulse_test.py  e2e_reload_test.py  e2e_streaming_test.py  e2e_subagent_test.py  e2e_webcam_tracking_test.py
tools/avatar/: asuna_tts_server.py  gptsovits_engine.py  gptsovits_tts_server.py  nmt_engine.py  nmt_translator_server.py  openai_proxy_sidecar.py  qwen3_engine.py  qwen3_tts_sidecar.py  speech_sidecar.py  text_normalize.py
tts_tools/: _test_helpers.py
web/: .npmrc  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
web/src/: App.tsx  main.tsx  test-setup.ts
web/src/components/: CharacterRoster.tsx  ServiceToasts.tsx
web/src/components/avatar/: AvatarControls.tsx  Live2DViewer.tsx  useAvatarSocket.ts
web/src/components/settings/: AgentEditor.tsx  AvatarEditor.tsx  SubagentEditor.tsx  primitives.tsx  types.ts
web/src/components/settings/__tests__/: primitives.test.tsx
web/src/lib/: apiBase.ts  characters.ts  fetchCache.ts  models.ts  nativeAudio.ts  petWindow.ts  tauriShell.ts  theme.ts  useVoiceInput.ts  webcamTracker.ts
web/src/pages/: Avatar.tsx  Characters.tsx  Home.tsx  Pulse.tsx  Settings.tsx
