[package]
name = "companion-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "waifu-companion server: serves the avatar/Pulse UI, drives TTS, and bridges to the upstream agent (zeroclaw / openclaw / hermes / custom)."
homepage = "https://github.com/Wty2003328/waifu-companion"
readme = "../../README.md"
keywords = ["live2d", "tts", "avatar", "tauri", "agent"]
categories = ["multimedia", "web-programming::http-server"]

[[bin]]
name = "companion-server"
path = "src/main.rs"

[dependencies]
companion-core.workspace = true
companion-avatar.workspace = true
companion-pulse.workspace = true

# Lock-free atomic swap for the agent client so config changes apply
# without a process restart. ArcSwap::store atomically publishes a new
# Arc<ZeroclawClient> visible to subsequent `.load()` calls.
arc-swap = "1"

tokio.workspace = true
tokio-stream.workspace = true
futures-util.workspace = true
axum = { workspace = true, features = ["ws", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }

serde.workspace = true
serde_json.workspace = true
toml.workspace = true

anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
directories.workspace = true

[dev-dependencies]
tempfile = "3.26"
reqwest.workspace = true
