[package]
name = "companion-tauri"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
authors = ["zeroclaw-companion contributors"]
description = "Tauri 2 desktop shell for the zeroclaw companion. Bundles companion-server as a sidecar."
publish = false

# This crate is intentionally NOT a member of the parent workspace
# (its build.rs requires the sidecar binary to exist before compile).
# So all metadata is inlined here, NOT inherited via `.workspace = true`.

[lib]
name = "companion_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "companion-tauri"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
anyhow = "1"
# Native audio playback. WebView2 on Windows classifies its audio
# stream as "communications" (AGC + acoustic echo cancellation), which
# audibly degrades TTS playback. rodio uses cpal → WASAPI in the host
# process directly, which Windows classifies as multimedia and leaves
# untouched. Frontend invokes us via tauri::command instead of using
# its <video> element when the host is Tauri.
rodio = { version = "0.20", default-features = false, features = ["wav", "hound"] }
base64 = "0.22"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
